Fix menu height on small screens

--- a/src/components/nav/Nav.css
+++ b/src/components/nav/Nav.css
@@ -131,12 +131,6 @@ h1 {
   }
 }
 
-@media screen and (max-width: 400px) {
-  .mobile-navUl {
-    top: 35px;
-  }
-}
-
 @media screen and (max-width: 320px) {
   .navBar {
     height: 45px;
